2.task/3.APP/01.test.apple_banana/1.1.apple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple-app
  namespace: test
  labels:
    app: apple
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apple
  template:
    metadata:
      labels:
        app: apple
    spec:
      containers:
      - name: apple-app
        image: hashicorp/http-echo
        args:
        - "-text=apple"
---
kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: test
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image
